--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap-sass": "^3.3.7",
+    "classnames": "^2.2.5",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "react": "^16.1.1",
